# Labs_OOP_2

./: .gitignore  CMakeLists.txt  main.cpp  tests.cpp
